--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Jinhui(Kenway) Xu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : # "Short biography for the left-hand sidebar"
   location         : # "Earth"
-  employer         : "Red Brick University"
+  employer         : "Zhejiang University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "xujinhui52@163.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
