--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "profile.png"
   name             : "Jinhui(Kenway) Xu"
   pronouns         : # example: "she/her"  
-  bio              : # "Short biography for the left-hand sidebar"
-  location         : # "Earth"
+  bio              : " "
+  location         : "Hangzhou, Zhejiang"
   employer         : "Zhejiang University"
   uri              : # URL
   email            : "xujinhui52@163.com" 
@@ -48,7 +48,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
