--- a/_config.yml
+++ b/_config.yml
@@ -217,7 +217,7 @@ collections:
     permalink: /:collection/:path/
   research:
     output: true
-    permalink: /:research/:path/
+    permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
